--- a/src/sass/footer.scss
+++ b/src/sass/footer.scss
@@ -3,18 +3,53 @@
   margin: 0 auto;
 }
 
-.footer {
-  z-index: 3;
+// .footer {
+//   z-index: 1;
+// }
+
+// .footer_wrapper {
+//   background: grey;
+// Пропадает почему-то текст, может просто без этого?
+// }
+
+.footer_wrapper {
+  margin-bottom: 23px; 
+  // Я тут место добавил 
 }
 
-// ТУТ ПРОПИСЫВАЕТ СТИЛИ ПОД MOBILE
+#footer_line {
+  background-color: grey;
+  width: 100%;
+  height: 1px;
+}
+
+#footer_template1, #footer_template2 {
+  color: grey;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 14pt;
+  display: inline-block;
+}
+
+#footer_template1 {
+  margin-top: 23px;
+  margin-bottom: 0px;
+}
+
+#footer_template2 {
+  margin-top: 10px;
+  margin-bottom: 0px
+}
+
 
 @media (min-width: 768px) {
   .container {
     width: 708px;
   }
 
-  // ТУТ ПРОПИСЫВАЕТ СТИЛИ ПОД TABLET
+  #footer_template1 {
+    margin-right: 5px;
+  }
+
 }
 
 @media (min-width: 1199px) {
