--- a/src/sass/section6.scss
+++ b/src/sass/section6.scss
@@ -4,7 +4,7 @@
 }
 
 .section6_wrapper {
-  background: coral;
+  background: rgb(243, 34, 132);
   
 }
 
@@ -12,15 +12,16 @@
   display: flex;
   flex-flow: column;
   justify-content: center;
-  padding-bottom: 100px;
+  padding-bottom: 25px;
 }
 
 #ConUs {
   font-family: 'Raleway', sans-serif;
   text-align: center;
   text-transform: uppercase;
-  font-size: 18pt;
+  color: white;
   overflow: hidden;
+  margin-top: 40px;
 }
 
 #ConUs:before,
@@ -29,10 +30,10 @@
   display: inline-block;
   vertical-align: middle;
   box-sizing: border-box;
-  width: 25%;
+  width: 60px;
   height: 1px;
-  background-color: grey;
-  border: solid #FFF;
+  background-color: white;
+  border: solid rgb(243, 34, 132);
   border-width: 0 10px;
   position: relative;
 }
@@ -45,18 +46,19 @@
   margin-right: -100%;
 }
 
-#top {
+#s6_top {
   font-family: 'Raleway', sans-serif;
   text-align: center;
-  font-size: 24pt;
-
+  margin-top: 0;
+  color: white;
 }
 
-#low {
+#s6_low {
   font-family: 'Open Sans', sans-serif;
-  font-size: 14pt;
-  text-align: center;
+  font-size: 15pt;
+  text-align: center; 
   color: #979797;
+  margin-bottom: 42px;
 }
 
 #Contacts {
@@ -78,11 +80,13 @@
   width: 178px;
 }
 
-input {
+.s6_input {
   font-family: 'Open Sans', sans-serif;
   font-size: 16pt;
   border-radius: 4px;
   border: none;
+  width: 270px;
+  margin-left: 11px;
 }
 
 #submit {
@@ -95,30 +99,97 @@ input {
   height: 15%;
 }
 
-.s6_btn {
-  display: block;
-  margin: 50px auto;
-  height: 50px;
-  width: 100px;
-  background-color: orange;
-  border: none;
-  border-radius: 10%;
-  cursor: pointer;
+@media (width: 320px) {
+  .s6_btn {
+   display: block;
+   margin: 45px auto;
+   height: 50px;
+   width: 170px;
+   background-color: orange;
+   border: none;
+   border-radius: 25px;
+   cursor: pointer;
+  }
+}
+
+@media (width: 320px) {
+  .s6_photos {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 20%;
+  margin-bottom: 40px;
+  // Оно ломало всё тут из-за таблета, поэтому пришлось его менять медиаправилом
+  }
+}
+
+#s6_photo1 {
+  margin-top: 11px;
+  margin-left: 16px;
+}
+
+#s6_photo2 {
+  margin-top: 13px;
+  margin-left: 12px;
+}
+
+#s6_photo3 {
+  margin-top: 10px;
+  margin-left: 11px;
+}
+
+.s6_img1 {
+  width: 42px;
+  height: 42px;
+  background: #3b5997;
+  border-radius: 50%;
+}
+
+.s6_img2 {
+  width: 42px;
+  height: 42px;
+  background: #3ec2f3;
+  border-radius: 50%;
 }
 
 
-// ТУТ ПРОПИСЫВАЕТ СТИЛИ ПОД MOBILE
+.s6_img3 {
+  width: 42px;
+  height: 42px;
+  background: #007ab9;
+  border-radius: 50%;
+}
+
+// Пытался в кружёк их взять, не выходит почему-то
+
+.s6_form {
+  margin-top: 12px;
+}
+
+.s6_input:first-child {
+  margin-bottom: 25px;
+}
+
+@media (width: 320px) {
+  .s6_ta{
+   margin-top: 28px;
+   width: 270px;
+    border-radius: 10px;
+   margin-left: 10px;
+  }
+}
+
+// Оно ломало всё в таблетке, поэтому пришлось его менять медиаправилом
 
 @media (width: 768px) {
   .container {
     width: 708px;
   }
 
-  .rightside {
-    height: 200px;
-    display: block;
-    margin: 0 auto;
-  }
+  // .rightside {
+  //   height: 200px;
+  //   display: block;
+  //   margin: 0 auto;
+  // }
 
 .s6_form {
   display: flex;
@@ -126,7 +197,7 @@ input {
   width: 510px;
   margin: 0 auto;
   height: 100px;
-}
+ }
 .s6_input {
   width: 250px;
   height: 40px;
@@ -134,16 +205,37 @@ input {
   display: inline-block;
   border: 1px solid black;
   // margin-bottom: 20px;
-}
+ }
+
+// Там на макете по-другому формы сделаны, я решил не переделывать. Если скажете, сделаю.
 
 .s6_form input:first-child {
   margin-bottom: 20px;
-}
+ }
 
-.s6_ta {
-  width: 250px;
+.s6_ta{
+  width: 270px;
+  height: 500px;
+  border-radius: 10px;
+ }
 
-}
+ .s6_btn {
+  display: block;
+  margin: 45px auto;
+  height: 50px;
+  width: 170px;
+  background-color: orange;
+  border: none;
+  border-radius: 25px;
+  cursor: pointer;
+ }
+
+.s6_photos {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 270px;
+  margin-bottom: 40px;
+ }
 }
 
 @media (width: 1200px) {
@@ -151,5 +243,98 @@ input {
     width: 1120px;
   }
 
-  // ТУТ ПРОПИСЫВАЕТ СТИЛИ ПОД DESKTOP
+  .s6_form {
+    display: flex;
+    justify-content: flex-end ;
+    flex-flow: wrap;
+  }
+
+  .s6_input:first-child {
+    margin: 0;
+    margin-right: 18px;
+  }
+
+  .s6_btn {
+    display: flex;
+    justify-content: flex-end;
+    display: block;
+    margin: 30px 950px 0;
+    height: 50px;
+    width: 170px;
+    background-color: orange;
+    border: none;
+    border-radius: 25px;
+    cursor: pointer;
+
+  }
+
+  .s6_input {
+    height: 43px;
+    width: 270px;
+    margin-bottom: 30px;
+  }
+
+  .s6_ta{
+    width: 570px;
+    height: 178px;
+    border-radius: 10px;
+  }
+
+  .section6 {
+    padding-bottom: 125px;
+  }
+
+  #ConUs{
+    margin-bottom: 40px;
+  }
+
+  .LeftSide {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    margin-top: -29%;
+    // Не знал тут, как по-другому можно
+  }
+
+  .Touch {
+    flex-direction: column;
+    justify-content: flex-start;
+    margin: 0;
+  }
+
+  .s6_photos {
+    margin: 0;
+    justify-content: flex-start;
+    display: flex;
+  }
+
+  .s6_NumberEmail {
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+
+  .s6_img1 {
+    margin-right: 15px;
+  }
+
+  .s6_img2 {
+    margin-right: 15px;
+  }
+
+  // Вот тут я кароче застрял, минут на 20. Всего лишь надо было поменять текст элайн.
+
+  #Contacts {
+    text-align: left;
+  }
+
+  #s6_top {
+    text-align: left;
+  }
+
+  #s6_low {
+    text-align: left;
+  }
+
+
+
 }
