fixes all section before students

--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -13,6 +13,8 @@ body {
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-// .container {
-//   width: 292px;
-// }
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
