--- a/src/sass/section1.scss
+++ b/src/sass/section1.scss
@@ -4,7 +4,7 @@
 }
 
 .s1_wrapper {
-  background-color: black;
+  background-color: rgb(32, 16, 77);
 }
 
 .section1 {
@@ -22,7 +22,15 @@
 }
 
 .s1_btn {
+  width: 150px;
+  height: 80px;
+  padding-top: 25px;
+  border: 3px solid red;
+  text-align: center;
   color: red;
+  text-transform: uppercase;
+  font-weight: bold;
+  cursor: pointer;
 }
 
 .section1_title {
