--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -18,3 +18,20 @@ ul {
   margin: 0;
   padding: 0;
 }
+
+.container {
+  width: 292px;
+  margin: 0 auto;
+}
+
+@media (min-width: 768px) {
+  .container {
+    width: 708px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .container {
+    width: 1145px;
+  }
+}
