--- a/src/sass/section3.scss
+++ b/src/sass/section3.scss
@@ -1,27 +1,36 @@
-.container {
-  width: 292px;
-  margin: 0 auto;
-}
-
-.section_wrapper {
-  background: #023b3b;
-  // background-image: url('../images/alien.jpg');
-  background-position: center;
-  background-size: cover;
-  color: wheat;
+.section3_wrapper {
+  background: rgb(63, 94, 251);
+  background: linear-gradient(90deg, rgba(147, 83, 183, 0.7161239495798319) 47%, rgba(252, 70, 107, 0.7357317927170868) 100%, rgba(63, 94, 251, 0.758140756302521) 0%, );
 }
 
 .section-3 {
-  padding-top: 60px;
-  padding-bottom: 60px;
+  padding: 100px 0;
+}
+
+.section-3,
+.s3_block-1,
+.s3_block-1 {
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
 }
 
 .section-3_title {
+  display: block;
+  margin: 20px auto;
+  font-size: 18pt;
+  font-family: 'Raleway', sans-serif;
   text-align: center;
+  color: black;
   text-transform: uppercase;
 }
 
 .section-3_text {
+  display: block;
+  margin: 0 auto;
+  width: 260px;
+  font-size: 16pt;
+  color: white;
   text-align: center;
 }
 
@@ -29,58 +38,69 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  width: 190px;
-  margin: 0 auto;
+  width: 230px;
+  margin: 10px auto;
 }
 
 .circle {
+  align-self: center;
+  width: 100px;
+  height: 100px;
+  border-radius: 58%;
+  background: darkblue;
   display: flex;
   justify-content: center;
-  align-self: center;
-  width: 70px;
-  height: 70px;
-  margin: 10px;
-  border-radius: 50%;
-  background: darkblue;
 }
+
 
 .ico {
   align-self: center;
 }
 
-.ico img {
+.video_section-3 {
   display: block;
-  width: 30px;
-  height: 30px;
-}
-
-iframe {
-  display: block;
-  margin: 0 auto;
-  width: 292px;
-  height: 218px;
+  width: 285px;
+  height: 217px;
+  margin: 20px auto;
 }
 
 @media (min-width: 768px) {
-  .container {
-    width: 708px;
-    margin: 0 auto;
+  .section-3 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
   }
 
-  .section-3 {
-    height: 100%;
+  .s3_block-1,
+  .s3_block-2 {
+    width: 350px;
+  }
+
+  .video_section-3 {
+    width: 330px;
+    height: 250px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .section-3_title {
+    font-size: 32pt;
+    margin: 0 auto;
   }
 
   .section-3_text {
-    width: 540px;
-    display: block;
-    margin: 0 auto;
-  }
-
-  iframe {
+    font-size: 18pt;
+    margin: 50px auto;
     width: 500px;
-    height: 306px;
   }
 
+  .s3_block-1,
+  .s3_block-2 {
+    width: 550px;
+  }
 
+  .video_section-3 {
+    width: 530px;
+    height: 360px;
+  }
 }
