--- a/src/sass/section5.scss
+++ b/src/sass/section5.scss
@@ -1,8 +1,3 @@
-.container {
-  width: 292px;
-  margin: 0 auto;
-}
-
 .section5 {
   display: flex;
   flex-flow: column;
@@ -63,7 +58,7 @@
   opacity: 0.5;
   height: 50px;
   transform: translateY(-50%);
-  background: rgba(0, 0, 0, .5);
+  background: rgba(0, 0, 0, 0.5);
 }
 
 .slider__control_show {
@@ -75,7 +70,7 @@
   color: #fff;
   text-decoration: none;
   outline: 0;
-  opacity: .9;
+  opacity: 0.9;
 }
 
 .slider__control_left {
@@ -107,20 +102,14 @@
   text-align: center;
 }
 
-// ТУТ ПРОПИСЫВАЕТ СТИЛИ ПОД MOBILE
-
 @media (min-width: 768px) {
-  .container {
-    width: 708px;
+  .s5_item p {
+    width: 500px;
   }
-
-  // ТУТ ПРОПИСЫВАЕТ СТИЛИ ПОД TABLET
 }
 
 @media (min-width: 1199px) {
-  .container {
-    width: 1120px;
+  .s5_item p {
+    width: 700px;
   }
-
-  // ТУТ ПРОПИСЫВАЕТ СТИЛИ ПОД DESKTOP
 }
