--- a/src/sass/section6.scss
+++ b/src/sass/section6.scss
@@ -1,20 +1,27 @@
-.container {
-  width: 292px;
-  margin: 0 auto;
-}
-
 .section6_wrapper {
   background: rgb(243, 34, 132);
-
 }
 
 .section6 {
+  padding: 50px 0;
+}
+
+.section6,
+.rightside,
+.LeftSide {
   display: flex;
   flex-flow: column;
   justify-content: center;
-  padding-bottom: 25px;
 }
 
+// .LeftSide {
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: flex-start;
+//   margin-top: -29%;
+//   // Не знал тут, как по-другому можно
+// }
+// Section title
 #ConUs {
   font-family: 'Raleway', sans-serif;
   text-align: center;
@@ -22,6 +29,7 @@
   color: white;
   overflow: hidden;
   margin-top: 40px;
+  position: relative;
 }
 
 #ConUs:before,
@@ -35,16 +43,64 @@
   background-color: white;
   border: solid rgb(243, 34, 132);
   border-width: 0 10px;
-  position: relative;
+  position: absolute;
+  top: 45%;
 }
 
-// #ConUs:before {
-//   margin-left: -100%;
+#ConUs:before {
+  left: 9%;
+}
+
+#ConUs:after {
+  right: 9%;
+}
+
+// RIGHTSIDE
+.s6_form {
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  // margin-top: 12px;
+}
+
+// .s6_input:first-child {
+//   margin-bottom: 25px;
 // }
 
-// #ConUs:after {
-//   margin-right: -100%;
-// }
+.s6_input {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 16pt;
+  border-radius: 4px;
+  border: none;
+  width: 270px;
+  margin: 11px auto;
+}
+
+.s6_ta {
+  margin: 28px auto;
+  width: 270px;
+  border-radius: 10px;
+  // margin-left: 10px;
+}
+
+.s6_btn {
+  display: block;
+  margin: 45px auto;
+  height: 50px;
+  width: 170px;
+  background-color: orange;
+  border: none;
+  border-radius: 25px;
+  cursor: pointer;
+}
+
+// LEFTSIDE
+.Touch {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  margin: 0;
+}
 
 #s6_top {
   font-family: 'Raleway', sans-serif;
@@ -61,89 +117,19 @@
   margin-bottom: 42px;
 }
 
-#Contacts {
-  font-family: 'Open Sans', sans-serif;
-  font-weight: bold;
-  color: #bface2;
-  text-align: center;
+.s6_photos {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 20%;
+  margin-bottom: 40px;
+  // Оно ломало всё тут из-за таблета, поэтому пришлось его менять медиаправилом
 }
 
-#line {
-  background-color: grey;
-  width: 100%;
-}
-
-#Template {
-  color: grey;
-  font-family: 'Open Sans', sans-serif;
-  font-size: 14pt;
-  width: 178px;
-}
-
-.s6_input {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 16pt;
-  border-radius: 4px;
-  border: none;
-  width: 270px;
-  margin-left: 11px;
-}
-
-#submit {
-  font-size: 22pt;
-  background-color: #31d4e7;
-  color: white;
-  text-align: center;
-  text-transform: uppercase;
-  width: 15%;
-  height: 15%;
-}
-
-
-@media (width: 320px) {
-  .s6_btn {
-    display: block;
-    margin: 45px auto;
-    height: 50px;
-    width: 170px;
-    background-color: orange;
-    border: none;
-    border-radius: 25px;
-    cursor: pointer;
-  }
-
-  .s6_img1 img,
-  .s6_img2 img,
-  .s6_img3 img {
-    left: 10%;
-  }
-}
-
-@media (width: 320px) {
-  .s6_photos {
-    display: flex;
-    justify-content: space-between;
-    margin: 0 20%;
-    margin-bottom: 40px;
-    // Оно ломало всё тут из-за таблета, поэтому пришлось его менять медиаправилом
-  }
-}
-
-// #s6_photo1 {
-//   margin-top: 11px;
-//   margin-left: 16px;
+// .s6_photos {
+//   margin: 0;
+//   justify-content: flex-start;
+//   display: flex;
 // }
-
-// #s6_photo2 {
-//   margin-top: 13px;
-//   margin-left: 12px;
-// }
-
-// #s6_photo3 {
-//   margin-top: 10px;
-//   margin-left: 11px;
-// }
-
 // свойства и значения одинаковы, можно селекторы через "," прописать или
 // вообще всем трем один селектор надо было дать.
 .s6_img1,
@@ -162,8 +148,200 @@
 .s6_img3 img {
   position: absolute;
   bottom: 14%;
-  left: 14%;
+  left: 10%;
 }
+
+.s6_NumberEmail {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+#Contacts {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: bold;
+  color: #bface2;
+  text-align: center;
+}
+
+@media (min-width: 768px) {
+  #ConUs:before {
+    left: 32%;
+  }
+
+  #ConUs:after {
+    right: 32%;
+  }
+
+  .s6_form {
+    display: flex;
+    flex-flow: row wrap;
+    width: 510px;
+    margin: 0 auto;
+    // height: 100px;
+  }
+
+  .s6_input {
+    width: 250px;
+    height: 40px;
+    // margin-right: 10px;
+    // display: inline-block;
+    border: 1px solid black;
+  }
+
+  // .s6_form input:first-child {
+  // margin-bottom: 20px;
+  // }
+
+  .s6_ta {
+    width: 510px;
+    // height: 500px;
+    border-radius: 10px;
+    margin: 0 auto;
+  }
+
+  // .s6_btn {
+  //   display: block;
+  //   margin: 45px auto;
+  //   height: 50px;
+  //   width: 170px;
+  //   background-color: orange;
+  //   border: none;
+  //   border-radius: 25px;
+  //   cursor: pointer;
+  // }
+
+  .s6_photos {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 auto;
+    // margin-bottom: 40px;
+  }
+
+  .s6_img1 img,
+  .s6_img2 img,
+  .s6_img3 img {
+    left: 6%;
+  }
+}
+
+@media (min-width: 1200px) {
+  #ConUs:before {
+    left: 39%;
+  }
+
+  #ConUs:after {
+    right: 39%;
+  }
+
+
+  .rightside,
+  .LeftSide {
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    width: 550px;
+  }
+
+  .s6_form-wrapper {
+    display: flex;
+    flex-flow: row-reverse;
+    justify-content: space-around;
+  }
+
+  // .s6_form {
+  //   display: flex;
+  //   flex-flow: wrap;
+  //   justify-content: flex-end;
+  // }
+
+  // .s6_input:first-child {
+  //   margin: 0;
+  //   margin-right: 18px;
+  // }
+
+  // .s6_btn {
+  // display: flex;
+  // justify-content: flex-end;
+  //   display: block;
+  //   margin: 30px 950px 0;
+  //   height: 50px;
+  //   width: 170px;
+  //   background-color: orange;
+  //   border: none;
+  //   border-radius: 25px;
+  //   cursor: pointer;
+  // }
+
+  // .s6_input {
+  //   height: 43px;
+  //   width: 270px;
+  //   margin-bottom: 30px;
+  // }
+
+  // .s6_ta {
+  //   width: 570px;
+  //   height: 178px;
+  //   border-radius: 10px;
+  // }
+
+  // .section6 {
+  //   padding-bottom: 125px;
+  // }
+
+  // #ConUs {
+  //   margin-bottom: 40px;
+  // }
+
+  // #Contacts {
+  //   text-align: left;
+  // }
+
+  // #s6_top {
+  //   text-align: left;
+  // }
+
+  // #s6_low {
+  //   text-align: left;
+  // }
+}
+
+// #line {
+//   background-color: grey;
+//   width: 100%;
+// }
+
+// #Template {
+//   color: grey;
+//   font-family: 'Open Sans', sans-serif;
+//   font-size: 14pt;
+//   width: 178px;
+// }
+
+// #submit {
+//   font-size: 22pt;
+//   background-color: #31d4e7;
+//   color: white;
+//   text-align: center;
+//   text-transform: uppercase;
+//   width: 15%;
+//   height: 15%;
+// }
+
+// #s6_photo1 {
+//   margin-top: 11px;
+//   margin-left: 16px;
+// }
+
+// #s6_photo2 {
+//   margin-top: 13px;
+//   margin-left: 12px;
+// }
+
+// #s6_photo3 {
+//   margin-top: 10px;
+//   margin-left: 11px;
+// }
 
 // .s6_img2 {
 //   width: 42px;
@@ -182,186 +360,4 @@
 
 // Пытался в кружёк их взять, не выходит почему-то
 
-.s6_form {
-  margin-top: 12px;
-}
-
-.s6_input:first-child {
-  margin-bottom: 25px;
-}
-
-@media (width: 320px) {
-  .s6_ta {
-    margin-top: 28px;
-    width: 270px;
-    border-radius: 10px;
-    margin-left: 10px;
-  }
-}
-
 // Оно ломало всё в таблетке, поэтому пришлось его менять медиаправилом
-
-@media (width: 768px) {
-  .container {
-    width: 708px;
-  }
-
-  // .rightside {
-  //   height: 200px;
-  //   display: block;
-  //   margin: 0 auto;
-  // }
-
-  .s6_form {
-    display: flex;
-    flex-flow: column wrap;
-    width: 510px;
-    margin: 0 auto;
-    height: 100px;
-  }
-
-  .s6_input {
-    width: 250px;
-    height: 40px;
-    margin-right: 10px;
-    display: inline-block;
-    border: 1px solid black;
-    // margin-bottom: 20px;
-  }
-
-  // Там на макете по-другому формы сделаны, я решил не переделывать. Если скажете, сделаю.
-
-  .s6_form input:first-child {
-    margin-bottom: 20px;
-  }
-
-  .s6_ta {
-    width: 270px;
-    height: 500px;
-    border-radius: 10px;
-  }
-
-  .s6_btn {
-    display: block;
-    margin: 45px auto;
-    height: 50px;
-    width: 170px;
-    background-color: orange;
-    border: none;
-    border-radius: 25px;
-    cursor: pointer;
-  }
-
-  .s6_photos {
-    display: flex;
-    justify-content: space-between;
-    margin: 0 270px;
-    margin-bottom: 40px;
-  }
-
-  .s6_img1 img,
-  .s6_img2 img,
-  .s6_img3 img {
-    left: 6%;
-  }
-}
-
-@media (width: 1200px) {
-  .container {
-    width: 1120px;
-  }
-
-  .s6_form {
-    display: flex;
-    justify-content: flex-end;
-    flex-flow: wrap;
-  }
-
-  .s6_input:first-child {
-    margin: 0;
-    margin-right: 18px;
-  }
-
-  .s6_btn {
-    display: flex;
-    justify-content: flex-end;
-    display: block;
-    margin: 30px 950px 0;
-    height: 50px;
-    width: 170px;
-    background-color: orange;
-    border: none;
-    border-radius: 25px;
-    cursor: pointer;
-
-  }
-
-  .s6_input {
-    height: 43px;
-    width: 270px;
-    margin-bottom: 30px;
-  }
-
-  .s6_ta {
-    width: 570px;
-    height: 178px;
-    border-radius: 10px;
-  }
-
-  .section6 {
-    padding-bottom: 125px;
-  }
-
-  #ConUs {
-    margin-bottom: 40px;
-  }
-
-  .LeftSide {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    margin-top: -29%;
-    // Не знал тут, как по-другому можно
-  }
-
-  .Touch {
-    flex-direction: column;
-    justify-content: flex-start;
-    margin: 0;
-  }
-
-  .s6_photos {
-    margin: 0;
-    justify-content: flex-start;
-    display: flex;
-  }
-
-  .s6_NumberEmail {
-    flex-direction: column;
-    justify-content: flex-start;
-  }
-
-  // на кой эти маргины тут?
-
-  // .s6_img1 {
-  //   margin-right: 15px;
-  // }
-
-  // .s6_img2 {
-  //   margin-right: 15px;
-  // }
-
-  // Вот тут я кароче застрял, минут на 20. Всего лишь надо было поменять текст элайн.
-
-  #Contacts {
-    text-align: left;
-  }
-
-  #s6_top {
-    text-align: left;
-  }
-
-  #s6_low {
-    text-align: left;
-  }
-}
